# Projeto_Final-Back-End-EBAC

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: exceptions.py  main.py
app/api/routes/: pokemon.py
app/clients/: pokeapi_client.py
app/core/: config.py
app/db/: session.py
app/models/: pokemon.py  pokemon_cache.py  pokemon_custom.py
app/schemas/: pokemon.py
app/services/: pokemon_service.py
tests/: conftest.py  test_cache.py  test_create_pokemon.py  test_crud.py  test_delete_pokemon.py  test_errors.py  test_get_pokemon.py  test_list_pokemons.py  test_update_pokemon.py
